--- a/tp4/tp4.ipynb
+++ b/tp4/tp4.ipynb
@@ -39,13 +39,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from graph import Graph\n",
     "\n",
+    "class DisjointSet:\n",
+    "    def __init__(self):\n",
+    "        self.parent = {}\n",
+    "        self.rank = {}\n",
+    "\n",
+    "    def find(self, item):\n",
+    "        if self.parent[item] != item:\n",
+    "            self.parent[item] = self.find(self.parent[item])\n",
+    "        return self.parent[item]\n",
+    "\n",
+    "    def union(self, set1, set2):\n",
+    "        root1 = self.find(set1)\n",
+    "        root2 = self.find(set2)\n",
+    "\n",
+    "        if root1 != root2:\n",
+    "            if self.rank[root1] > self.rank[root2]:\n",
+    "                self.parent[root2] = root1\n",
+    "            elif self.rank[root1] < self.rank[root2]:\n",
+    "                self.parent[root1] = root2\n",
+    "            else:\n",
+    "                self.parent[root2] = root1\n",
+    "                self.rank[root1] += 1\n",
+    "\n",
+    "    def add(self, item):\n",
+    "        if item not in self.parent:\n",
+    "            self.parent[item] = item\n",
+    "            self.rank[item] = 0\n",
+    "\n",
+    "    def get_components(self):\n",
+    "        components = {}\n",
+    "        for item in self.parent:\n",
+    "            root = self.find(item)\n",
+    "            if root not in components:\n",
+    "                components[root] = []\n",
+    "            components[root].append(item)\n",
+    "        return components\n",
+    "\n",
     "graph = Graph()\n",
+    "disjoint = DisjointSet()\n",
     "\n",
     "with open('web-Google.txt', 'r') as file:\n",
     "    for l in file:\n",
@@ -58,7 +96,9 @@
     "        for v in edge:\n",
     "            if not graph.vertex_exists(v):\n",
     "                graph.add_vertex(str(v))\n",
-    "        graph.add_edge(str(edge[0]), str(edge[1]))"
+    "                disjoint.add(v)\n",
+    "        graph.add_edge(str(edge[0]), str(edge[1]))\n",
+    "        disjoint.union(edge[0], edge[1])"
    ]
   },
   {
@@ -94,41 +134,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaño de la componente conexa más grande: 600493\n",
-      "Número de componentes conexas: 179851\n",
-      "El orden del algoritmo es O(V + E). = O(875713 + 5105039) = O(5980752)\n"
+      "Tamaño de la componente conexa más grande: 855802\n",
+      "Número de componentes conexas: 2746\n"
      ]
     }
    ],
    "source": [
+    "# 1) ¿Cuál es el tamaño de la componente conexa más grande? ¿Cuántas componentes conexas hay? \n",
+    "# hacerlo usando disjoint set\n",
+    "# disjoint = Disjoint()  Disjoint.__init__() missing 1 required positional argument: 'n'\n",
+    "components = disjoint.get_components()\n",
     "\n",
-    "def dfs(grafo, start_vertex, visited, component):\n",
-    "    stack = [start_vertex]\n",
-    "    while stack:\n",
-    "        vertex = stack.pop()\n",
-    "        if not visited[vertex]:\n",
-    "            visited[vertex] = True\n",
-    "            component.append(vertex)\n",
-    "            for neighbor in grafo.get_neighbors(vertex):\n",
-    "                if not visited[neighbor]:\n",
-    "                    stack.append(neighbor)\n",
-    "\n",
-    "def connected_components(grafo):\n",
-    "    visited = {vertex: False for vertex in grafo._graph}\n",
-    "    num_components = 0\n",
-    "    max_component_size = 0\n",
-    "    for vertex in grafo._graph:\n",
-    "        if not visited[vertex]:\n",
-    "            component = []\n",
-    "            dfs(grafo, vertex, visited, component)\n",
-    "            num_components += 1\n",
-    "            max_component_size = max(max_component_size, len(component))\n",
-    "    return max_component_size, num_components\n",
-    "\n",
-    "max_component_size, num_components = connected_components(graph)\n",
-    "print(\"Tamaño de la componente conexa más grande:\", max_component_size)\n",
-    "print(\"Número de componentes conexas:\", num_components)\n",
-    "print(\"El orden del algoritmo es O(V + E). = O(875713 + 5105039) = O(5980752)\")"
+    "max_component = max(components.values(), key=len)\n",
+    "print(\"Tamaño de la componente conexa más grande:\", len(max_component))\n",
+    "print(\"Número de componentes conexas:\", len(components))\n",
+    "\n"
    ]
   },
   {
@@ -136,35 +156,49 @@
    "metadata": {},
    "source": [
     "2) Calcular el camino mínimo de todos con todos. ¿En cuanto tiempo lo puede hacer? ¿Qué orden tiene el algoritmo? En caso de no alcanzarle el tiempo, estime cuanto tiempo le llevaría.\n",
+    "3) \n",
     "4) Utilice el punto 2 para calcular el diámetro del grafo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NetworkXError",
+     "evalue": "Found infinite path length because the digraph is not strongly connected",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNetworkXError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m neighbor \u001b[38;5;129;01min\u001b[39;00m graph\u001b[38;5;241m.\u001b[39mget_neighbors(v):\n\u001b[0;32m     12\u001b[0m         G\u001b[38;5;241m.\u001b[39madd_edge(v, neighbor)\n\u001b[1;32m---> 13\u001b[0m diameter \u001b[38;5;241m=\u001b[39m \u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdiameter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mG\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n",
+      "File \u001b[1;32m<class 'networkx.utils.decorators.argmap'> compilation 4:3\u001b[0m, in \u001b[0;36margmap_diameter_1\u001b[1;34m(G, e, usebounds, weight, backend, **backend_kwargs)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbz2\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\mmatt\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\networkx\\utils\\backends.py:633\u001b[0m, in \u001b[0;36m_dispatchable.__call__\u001b[1;34m(self, backend, *args, **kwargs)\u001b[0m\n\u001b[0;32m    628\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Returns the result of the original function, or the backend function if\u001b[39;00m\n\u001b[0;32m    629\u001b[0m \u001b[38;5;124;03mthe backend is specified and that backend implements `func`.\"\"\"\u001b[39;00m\n\u001b[0;32m    631\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m backends:\n\u001b[0;32m    632\u001b[0m     \u001b[38;5;66;03m# Fast path if no backends are installed\u001b[39;00m\n\u001b[1;32m--> 633\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43morig_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    635\u001b[0m \u001b[38;5;66;03m# Use `backend_name` in this function instead of `backend`\u001b[39;00m\n\u001b[0;32m    636\u001b[0m backend_name \u001b[38;5;241m=\u001b[39m backend\n",
+      "File \u001b[1;32mc:\\Users\\mmatt\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\networkx\\algorithms\\distance_measures.py:381\u001b[0m, in \u001b[0;36mdiameter\u001b[1;34m(G, e, usebounds, weight)\u001b[0m\n\u001b[0;32m    379\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _extrema_bounding(G, compute\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdiameter\u001b[39m\u001b[38;5;124m\"\u001b[39m, weight\u001b[38;5;241m=\u001b[39mweight)\n\u001b[0;32m    380\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m e \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 381\u001b[0m     e \u001b[38;5;241m=\u001b[39m \u001b[43meccentricity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    382\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(e\u001b[38;5;241m.\u001b[39mvalues())\n",
+      "File \u001b[1;32m<class 'networkx.utils.decorators.argmap'> compilation 8:3\u001b[0m, in \u001b[0;36margmap_eccentricity_5\u001b[1;34m(G, v, sp, weight, backend, **backend_kwargs)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbz2\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\mmatt\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\networkx\\utils\\backends.py:633\u001b[0m, in \u001b[0;36m_dispatchable.__call__\u001b[1;34m(self, backend, *args, **kwargs)\u001b[0m\n\u001b[0;32m    628\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Returns the result of the original function, or the backend function if\u001b[39;00m\n\u001b[0;32m    629\u001b[0m \u001b[38;5;124;03mthe backend is specified and that backend implements `func`.\"\"\"\u001b[39;00m\n\u001b[0;32m    631\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m backends:\n\u001b[0;32m    632\u001b[0m     \u001b[38;5;66;03m# Fast path if no backends are installed\u001b[39;00m\n\u001b[1;32m--> 633\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43morig_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    635\u001b[0m \u001b[38;5;66;03m# Use `backend_name` in this function instead of `backend`\u001b[39;00m\n\u001b[0;32m    636\u001b[0m backend_name \u001b[38;5;241m=\u001b[39m backend\n",
+      "File \u001b[1;32mc:\\Users\\mmatt\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\networkx\\algorithms\\distance_measures.py:320\u001b[0m, in \u001b[0;36meccentricity\u001b[1;34m(G, v, sp, weight)\u001b[0m\n\u001b[0;32m    318\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    319\u001b[0m             msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound infinite path length because the graph is not\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m connected\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 320\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m nx\u001b[38;5;241m.\u001b[39mNetworkXError(msg)\n\u001b[0;32m    322\u001b[0m     e[n] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(length\u001b[38;5;241m.\u001b[39mvalues())\n\u001b[0;32m    324\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m G:\n",
+      "\u001b[1;31mNetworkXError\u001b[0m: Found infinite path length because the digraph is not strongly connected"
+     ]
+    }
+   ],
    "source": [
     "# 2) Calcular el camino mínimo de todos con todos. ¿En cuanto tiempo lo puede hacer? ¿Qué orden tiene el algoritmo? En caso de no alcanzarle el tiempo, estime cuanto tiempo le llevaría.\n",
     "# 4) Utilice el punto 2 para calcular el diámetro del grafo.\n",
-    "\n",
-    "def floyd_warshall(grafo):\n",
-    "    vertices = list(grafo._graph.keys())\n",
-    "    n = len(vertices)\n",
-    "    dist = [[float('inf') for _ in range(n)] for _ in range(n)]\n",
-    "    for i in range(n):\n",
-    "        dist[i][i] = 0\n",
-    "    for vertex in vertices:\n",
-    "        for neighbor in grafo.get_neighbors(vertex):\n",
-    "            dist[vertices.index(vertex)][vertices.index(neighbor)] = grafo.get_edge_data(vertex, neighbor)\n",
-    "    for k in range(n):\n",
-    "        for i in range(n):\n",
-    "            for j in range(n):\n",
-    "                if dist[i][k] + dist[k][j] < dist[i][j]:\n",
-    "                    dist[i][j] = dist[i][k] + dist[k][j]\n",
-    "    return dist, max(max(row) for row in dist)\n",
-    "\n",
-    "dist, diameter = floyd_warshall(graph)"
+    "# usar el metodo de johnson de networkx\n",
+    "import networkx as nx\n",
+    "import time\n",
+    "start = time.time()\n",
+    "G = nx.DiGraph()\n",
+    "for v in graph._graph:\n",
+    "    G.add_node(v)\n",
+    "for v in graph._graph:\n",
+    "    for neighbor in graph.get_neighbors(v):\n",
+    "        G.add_edge(v, neighbor)\n",
+    "diameter = nx.diameter(G)\n",
+    "end = time.time()\n",
+    "\n"
    ]
   },
   {
@@ -185,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cantidad de triángulos: 11669313\n",
+      "Cantidad de triángulos: 3889771\n",
       "False\n"
      ]
     }
@@ -201,23 +235,26 @@
     "\n",
     "# 3) En un grafo un triángulo es una conexión entre 3 vértices A, B y C donde: A está conectado con B, B está conectado con C, C está conectado con A ¿Cuántos triángulos tiene el grafo?\n",
     "\n",
-    "def count_triangles(G):\n",
-    "    triangles = 0\n",
-    "    for node in G._graph.keys():\n",
-    "        # Obtener vecinos salientes\n",
-    "        neighbors = G.get_neighbors(node)\n",
-    "        for neighbor in neighbors:\n",
-    "            # Obtener vecinos salientes del vecino\n",
-    "            neighbors2 = G.get_neighbors(neighbor)\n",
-    "            for neighbor2 in neighbors2:\n",
-    "                neighbors3 = G.get_neighbors(neighbor2)\n",
-    "                if node in neighbors3:\n",
-    "                    triangles += 1\n",
-    "    return triangles\n",
+    "def count_directed_triangles(graph):\n",
+    "    triangle_count = 0\n",
+    "\n",
+    "    # Iterar sobre cada vértice\n",
+    "    for vertex in graph._graph:\n",
+    "        neighbors = graph.get_neighbors(vertex)\n",
     "        \n",
-    "triangles = count_triangles(graph)\n",
-    "print(\"Cantidad de triángulos:\", triangles)\n",
-    "print(13391903 == triangles)"
+    "        # Iterar sobre cada vecino\n",
+    "        for neighbor in neighbors:\n",
+    "            second_neighbors = graph.get_neighbors(neighbor)\n",
+    "            \n",
+    "            # Verificar si hay una arista de second_neighbor de vuelta al vértice original\n",
+    "            for second_neighbor in second_neighbors:\n",
+    "                if graph.edge_exists(second_neighbor, vertex):\n",
+    "                    triangle_count += 1\n",
+    "\n",
+    "    return triangle_count//3\n",
+    "\n",
+    "triangles = count_directed_triangles(graph)\n",
+    "print(\"Cantidad de triángulos:\", triangles)"
    ]
   },
   {
@@ -426,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
