--- a/tp4/tp4.ipynb
+++ b/tp4/tp4.ipynb
@@ -155,9 +155,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Tamaño de la componente conexa más grande: 855802\n",
+    "Número de componentes conexas: 2746"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2) Calcular el camino mínimo de todos con todos. ¿En cuanto tiempo lo puede hacer? ¿Qué orden tiene el algoritmo? En caso de no alcanzarle el tiempo, estime cuanto tiempo le llevaría.\n",
-    "3) \n",
-    "4) Utilice el punto 2 para calcular el diámetro del grafo."
+    "4. Utilice el punto 2 para calcular el diámetro del grafo."
    ]
   },
   {
@@ -637,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
